added jersey number scraping

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,29 @@
 Package: hockeyR
-Title: What the Package Does (One Line, Title Case)
+Title: Collect and Clean Hockey Stats
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Daniel",
+           family = "Morse",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "danmorse8642@gmail.com")
+Description: This package contains various functions to help scrape hockey data
+  from hockey-reference.com, including standings, player stats, and jersey number
+  history.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/danmorse314/hockeyR
 BugReports: https://github.com/danmorse314/hockeyR/issues
+Depends: 
+    R (>= 2.10)
+Imports:
+    dplyr,
+    glue,
+    janitor,
+    tidyr,
+    utils,
+    polite,
+    rvest,
+    stringr
