--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@
 export(get_jersey_players)
 export(get_player_stats)
 export(get_team_records)
+importFrom(rlang,.data)
 importFrom(utils,type.convert)
