--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(get_jersey_players)
 export(get_player_stats)
+export(get_rosters)
 export(get_team_records)
 importFrom(utils,type.convert)
