added pbp load function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_jersey_players)
 export(get_player_stats_hr)
 export(get_rosters)
 export(get_team_records)
+export(load_pbp)
 export(scrape_day)
 export(scrape_game)
 export(scrape_season)
