added proper links

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "danmorse8642@gmail.com")
 Description: Various functions to scrape hockey play-by-play data from the
-    NHL API. It also contains functions to scrape data from hockey-reference.com,
+    <https://www.nhl.com/>. It also contains functions to scrape data from <https://www.hockey-reference.com/>,
     including standings, player stats, and jersey number history.
 License: MIT + file LICENSE
 Encoding: UTF-8
