adding goalie stats function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_game_ids)
 export(get_game_info)
 export(get_game_rosters)
 export(get_game_shifts)
+export(get_goalie_stats_hr)
 export(get_jersey_players)
 export(get_player_stats_hr)
 export(get_rosters)
