--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_goalie_stats_hr)
 export(get_jersey_players)
 export(get_player_stats_hr)
 export(get_rosters)
+export(get_skater_stats_hr)
 export(get_team_records)
 export(load_pbp)
 export(scrape_day)
