added 3 new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(fix_player_columns)
+export(get_current_rosters)
+export(get_draft_class)
 export(get_game_ids)
 export(get_game_info)
 export(get_game_rosters)
@@ -12,6 +14,7 @@ export(get_player_stats_hr)
 export(get_rosters)
 export(get_skater_stats_hr)
 export(get_team_records)
+export(get_team_rosters)
 export(load_pbp)
 export(scrape_day)
 export(scrape_game)
