--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,7 +26,7 @@ reference:
 - title: Other NHL.com data
   desc: Functions to scrape other data from the NHL API.
   contents:
-  - "get_team_roster"
+  - "get_team_rosters"
   - "get_current_rosters"
   - "get_draft_class"
 - title: Calculation functions
